xcsoar (6.5~alpha1) unstable; urgency=low

  * new release

 --

xcsoar (6.4.6) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Wed, 23 Jan 2013 11:21:14 +0100

xcsoar (6.4.5) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Fri, 14 Dec 2012 21:42:52 +0100

xcsoar (6.4.4) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Thu, 15 Nov 2012 00:37:09 +0100

xcsoar (6.4.3) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Thu, 01 Nov 2012 16:31:28 +0100

xcsoar (6.4.2) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Wed, 17 Oct 2012 00:51:00 +0200

xcsoar (6.4.1) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Thu, 30 Aug 2012 00:36:26 +0200

xcsoar (6.4) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Tue, 31 Jul 2012 19:11:10 +0200

xcsoar (6.4~beta2) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Sat, 28 Jul 2012 17:19:40 +0200

xcsoar (6.4~beta1) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Sat, 21 Jul 2012 00:25:36 +0200

xcsoar (6.4~alpha2) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Fri, 06 Jul 2012 02:19:38 +0200

xcsoar (6.4~alpha1) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Thu, 28 Jun 2012 02:27:48 +0200

xcsoar (6.3.11) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Fri, 27 Jul 2012 17:49:26 +0200

xcsoar (6.3.10) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Fri, 20 Jul 2012 13:24:09 +0200

xcsoar (6.3.9) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Wed, 18 Jul 2012 13:21:33 +0200

xcsoar (6.3.8) unstable; urgency=low

  * new release

 -- Max Kellermann <max@duempel.org>  Fri, 22 Jun 2012 23:23:01 +0200
