@@ -17,7 +17,7 @@ Homepage: http://www.xcsoar.org/
 Package: xcsoar
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, ttf-dejavu
-Recommends: vali-xcs
+Suggests: xcsoar-doc, vali-xcs
 Description: tactical glide computer
  XCSoar is a tactical glide computer.  It was initially developed for
  Pocket PC (Windows CE).
@@ -31,3 +31,11 @@ Description: IGC G-record validation for XCSoar
  .
  This package provides the program "vali-xcs", which validates
  signatures generated by XCSoar.
+
+Package: xcsoar-doc
+Architecture: all
+Description: XCSoar manual
+ XCSoar is a tactical glide computer.  It was initially developed for
+ Pocket PC (Windows CE).
+ .
+ This package contains the manuals.
