@@ -1,3 +1,2 @@
 usr/bin/xcsoar
 usr/share/locale
-usr/share/doc/xcsoar
